--- a/seller.html
+++ b/seller.html
@@ -78,7 +78,7 @@
     <button>Submit</button>
 </form>
 <!-- FIXME: Send a query to the order tracking database with the set item and/or date range. Only include filled values in the query-->
-
+<!-- SELECT * from [table] WHERE userID=user's ID -->
 <!--FIXME: Item is not already in database for updating an item, show below-->
 <h2>Error Occured</h2>
 <p>The item you selected is not in the product database. Please add it using the Add an Item form</p>
