Changes to add delete account button and monitor product.
-Made changes to views.py: Motified deleteAccountView to accept POST. Log out the user before deletion, delete the user account, redirect to the homepage, display a success message. Added a new view function seller_dashboard() that requires the useer to be logged in, queries the database for all items listed by the logged in seller.
-Changes to homepage.html: Added a Delete My Account button to the top navigation bar. Also added support for displaying a message when an account is deleted.
-Changes to urls.py: Verified path for delete_account is correctly mapped to the DeleteAccountView. Addded a new route dashboard under the store app. provides a dedicated url for sellers to view and manage their listed products.
-Changes to main urls.py: Included the store urls under the seller route.
-Changes to models.py: Created a new Item model to represent products listed by sellers. 
-New seller_dashboard.html: Created a new HTML that displays the seller's products. It also handles the case where the seller has no products listed.

--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -22,6 +23,11 @@
                         <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
+                        <form action="{% url 'delete_account' %}" method="POST" onsubmit="return confirm('Are you sure you want to delete your account?');">
+                            <button type="submit" class="btn btn-sm ms-2 mt-1" style="background-color: #6c757d; color: white; border: none;">Delete My Account</button>
+                        </form>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
@@ -31,7 +37,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                 </ul>
             </div>
@@ -44,6 +50,7 @@
         <p>Your one-stop eCommerce destination for the best products.</p>
         <a href="#" class="btn btn-light btn-lg">Shop Now</a>
     </div>
+    
 
     <!-- Featured Products Section -->
     <div class="container my-5">
