--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -21,6 +22,13 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Home</a>
                     </li>
+                    
+                    {% if user.is_authenticated and user.role == 'seller' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'seller_dashboard' %}">Seller Dashboard</a>
+                    </li>
+                    {% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">Shop</a>
                     </li>
@@ -31,7 +39,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                 </ul>
             </div>
@@ -44,6 +52,7 @@
         <p>Your one-stop eCommerce destination for the best products.</p>
         <a href="#" class="btn btn-light btn-lg">Shop Now</a>
     </div>
+    
 
     <!-- Featured Products Section -->
     <div class="container my-5">
