Changes so admin can monitor users and products
views.py: Added admin_monitor_users view to retrieve all registered users. Also added admin_monitor_products to display all items in the store.
urls.py: Registered the url path for the admin_users and admin_products views.
admin_users.html: Created to display user name, email, and ID
homepage.html: Added manage users and manage products that only appears to admins. 
admin_products.html: Created to show each product name, price, stock, description, vendor, and photo.
models.py: Added item photo to the Item model to support product images.
settings.py: Configured media file handling

--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,22 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Home</a>
                     </li>
-                    
+
+
+                    {% if user.is_authenticated and user.role == 'admin' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_users' %}">Manage Users</a>
+                    </li>
+                    {% endif %}
+
+                    {% if user.is_authenticated and user.role == 'admin' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_products' %}">Manage Products</a>
+                    </li>
+                    {% endif %}
+
+
+
                     {% if user.is_authenticated and user.role == 'seller' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'seller_dashboard' %}">Seller Dashboard</a>
