--- a/seller.html
+++ b/seller.html
@@ -48,32 +48,75 @@
       <div id="collapseAdd" class="accordion-collapse collapse show" data-bs-parent="#sellerAccordion">
         <div class="accordion-body">
           <form>
+            {% csrf_token %}
             <div class="row g-3">
               <div class="col-md-6">
                 <label class="form-label">Item Name</label>
-                <input type="text" class="form-control" name="itemName">
+                <input type="text" class="form-control" name="name" required>
               </div>
               <div class="col-md-6">
                 <label class="form-label">Item Price ($)</label>
-                <input type="number" step="0.01" class="form-control" name="price">
+                <input type="number" step="0.01" class="form-control" name="price" required>
               </div>
               <div class="col-12">
                 <label class="form-label">Description</label>
-                <textarea class="form-control" name="description" rows="2"></textarea>
+                <textarea class="form-control" name="description" rows="2" required></textarea>
               </div>
               <div class="col-md-6">
                 <label class="form-label">Quantity</label>
-                <input type="number" class="form-control" name="quantity">
+                <input type="number" class="form-control" name="stock" required>
               </div>
               <div class="col-md-6">
                 <label class="form-label">Upload Image</label>
                 <input type="file" class="form-control" name="image">
               </div>
               <div class="col-12 text-end">
-                <button class="btn btn-success mt-3"><i class="bi bi-send"></i> Submit</button>
+                <button type="submit" class="btn btn-success mt-3"><i class="bi bi-send"></i> Submit</button>
               </div>
             </div>
           </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- View Product Listings -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingListings">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseListings">
+          <i class="bi bi-box-seam me-2"></i> View Product Listings
+        </button>
+      </h2>
+      <div id="collapseListings" class="accordion-collapse collapse" data-bs-parent="#sellerAccordion">
+        <div class="accordion-body">
+          {% if items %}
+          <div class="table-responsive">
+            <table class="table table-bordered bg-white shadow">
+              <thead class="table-dark">
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Price ($)</th>
+                  <th>Stock</th>
+                  <th>Date Added</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for item in items %}
+                <tr>
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.description }}</td>
+                  <td>{{ item.price }}</td>
+                  <td>{{ item.stock }}</td>
+                  <td>{{ item.created_at|date:"Y-m-d" }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+          {% else %}
+          <p class="text-muted">You have not added any products yet.</p>
+          {% endif %}
         </div>
       </div>
     </div>
@@ -88,35 +131,38 @@
       <div id="collapseUpdate" class="accordion-collapse collapse" data-bs-parent="#sellerAccordion">
         <div class="accordion-body">
           <form>
+            {% csrf_token %}
             <div class="mb-3">
-              <label class="form-label">Item to Update</label>
-              <input type="text" class="form-control">
+              <label class="form-label">Item to Update (ID)</label>
+              <input type="text" class="form-control" name="item_identifier" required>
             </div>
             <p class="text-muted">Leave fields blank if no update is needed.</p>
             <div class="row g-3">
               <div class="col-md-6">
                 <label class="form-label">New Name</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name="new_name">
               </div>
               <div class="col-md-6">
                 <label class="form-label">New Price ($)</label>
-                <input type="number" step="0.01" class="form-control">
+                <input type="number" step="0.01" class="form-control" name="new_price">
               </div>
               <div class="col-md-6">
                 <label class="form-label">New Quantity</label>
-                <input type="number" class="form-control">
+                <input type="number" class="form-control" name="new_stock">
               </div>
               <div class="col-md-6">
                 <label class="form-label">New Image</label>
-                <input type="file" class="form-control">
+                <input type="file" class="form-control" name="new_image">
               </div>
               <div class="col-12">
                 <label class="form-label">New Description</label>
-                <textarea class="form-control" rows="2"></textarea>
+                <textarea class="form-control" name="new_description" rows="2"></textarea>
               </div>
               <div class="col-12 text-end">
-                <button class="btn btn-warning mt-3"><i class="bi bi-save"></i> Update</button>
+                <button type="submit" class="btn btn-warning mt-3"><i class="bi bi-save"></i> Update</button>
+                <button type="submit" class="btn btn-danger mt-3"><i class="bi bi-save"></i> Delete</button>
               </div>
+            
             </div>
           </form>
         </div>
@@ -136,17 +182,17 @@
             <div class="row g-3">
               <div class="col-md-6">
                 <label class="form-label">Item Name</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name="report_item">
               </div>
               <div class="col-md-6">
                 <label class="form-label">Date Range</label>
                 <div class="input-group">
-                  <input type="date" class="form-control">
-                  <input type="date" class="form-control">
+                  <input type="date" class="form-control" name="start_date">
+                  <input type="date" class="form-control" name="end_date">
                 </div>
               </div>
               <div class="col-12 text-end">
-                <button class="btn btn-info text-white mt-3"><i class="bi bi-bar-chart-line"></i> Generate</button>
+                <button type="submit" class="btn btn-info text-white mt-3"><i class="bi bi-bar-chart-line"></i> Generate</button>
               </div>
             </div>
           </form>
@@ -155,7 +201,6 @@
     </div>
 
   </div>
-
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
